5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1674_1099.log
== TEST (2019-04-25 10:29:37) 
-- CODE:
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entrada:", a, ",", b, ",", c)

if ((a < b + c) and (b < a + c) and (c < a +b)):
elif ((a != b) and (b != c) and (a != c))
	d = "escaleno"
elif ((a != b) or (b != c):
	d = "isosceles"
elif ((a == b) and (b == c)):
	d = "equilatero"
else:
	d = "invalido"

print("Tipo de triangulo:", d)		
	
-- ERROR:
File "XXXX", line 8
    elif ((a != b) and (b != c) and (a != c))
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:29:42) 
-- CODE:
a = float(input("Lado a: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))

print("Entrada:", a, ",", b, ",", c)

if ((a < b + c) and (b < a + c) and (c < a +b)):
elif ((a != b) and (b != c) and (a != c)):
	d = "escaleno"
elif ((a != b) or (b != c):
	d = "isosceles"
elif ((a == b) and (b == c)):
	d = "equilatero"
else:
	d = "invalido"

print("Tipo de triangulo:", d)		
	
-- ERROR:
File "XXXX", line 8
    elif ((a != b) and (b != c) and (a != c)):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:30) 
-- CODE:
	from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	
-- ERROR:
File "XXXX", line 1
    from math import *
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:34) 
-- CODE:
from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:40) 
-- CODE:
from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:37:21) 
-- CODE:
from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	

if ((a >= b + c) or (b >= a + c) and (c >= a + b)):
	X = "invalido"
else:
	if ((a != b) and (b != c) and (a != c)):
		X = "escaleno"
		else:
			if ((a != b) or (b != c) or (a != c)):
				X = "isosceles"
				else:
					X = "equilatero"
					
print("Tipo de triangulo:", X)					
					
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:19) 
-- CODE:
from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	

if ((a >= b + c) or (b >= a + c) and (c >= a + b)):
	X = "invalido"
elif ((a != b) and (b != c) and (a != c)):
	X = "escaleno"
elif ((a != b) or (b != c) or (a != c)):
	X = "isosceles"
else:
	X = "equilatero"
					
print("Tipo de triangulo:", X)					
					
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:40:12) 
-- CODE:
from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	

if ((a >= b + c) or (b >= a + c) or (c >= a + b)):
	X = "invalido"
elif ((a != b) and (b != c) and (a != c)):
	X = "escaleno"
elif ((a != b) or (b != c) or (a != c)):
	X = "isosceles"
else:
	X = "equilatero"
					
print("Tipo de triangulo:", X)					
					
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:40:17) 
-- CODE:
from math import *
	
a = float(input ("Lado 1: "))
b = float(input ("Lado 2: "))
c = float(input ("Lado 3: "))
	
print("Entradas:", a, ",", b, ",", c)	

if ((a >= b + c) or (b >= a + c) or (c >= a + b)):
	X = "invalido"
elif ((a != b) and (b != c) and (a != c)):
	X = "escaleno"
elif ((a != b) or (b != c) or (a != c)):
	X = "isosceles"
else:
	X = "equilatero"
					
print("Tipo de triangulo:", X)					
					
-- EXECUTION TIME:
0.150541
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
